@@ -1,5 +1,10 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+
+==11/24/2012==
+Sorvani: (Vaion) Added /pet no cast and /pet focus
+Required SQL: utils/sql/svn/2262_required_pet_discipline_update.sql
+
 ==11/23/2012==
 cavedude: (Tabasco) Re-added probability, setting it to 100 (default) effectively bypasses probability and no additional roll is made. Setting it to 0 prevents the table from being rolled at all, so you can disable the table but still keep the entries if needed.
 Required SQL: utils/sql/svn/2260_probability.sql
